menambahkan baris paragraf
belajar web menyenangkan

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
 <h1>Selamat Datang di Website</h1>    
 <p>Hari ini belajar Github, HTML, dan Deploy ke Vercel</p>
+<p>Belajar Web Menyenangkan</p>
 </body>
 </html>
