--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
     <form action="proses.php" method="post">
         Nama <br>
         <input type="text" name="nama" id="nama" required><br>
+        Email<br>
         <input type="email" name="email" id="email" required><br>
         Jenis Kelamin <br>
         <input type="radio" name="jk" id="" value="L"> Laki - Laki 
@@ -138,6 +139,9 @@
             <option value="JKT">Jakarta</option>
             <option value="LLG">Lubuklinggau</option>
         </select>
+        Tanggal Lahir
+        <input type="date" name="tanggal_lahir" id="tanggal_lahir"><br>
+        <button type="submit">Simpan</button>
     </form>
 
 
