--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p>Belajar Web Menyenangkan</p>
 
 <!-- heading dari 1 sd 6 -->
- <h1>Judul </h1>
+ <h1 style="color: aquamarine;">Judul </h1>
  <h2>Judul</h2>
  <h3>Judul</h3>
  <h4>Judul</h4>
