--- a/index.html
+++ b/index.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Belajar HTML</title>
+    <link rel="stylesheet" href="css/style.css">
+    <style>
+        /*element selector 
+        body{
+            background-color: aliceblue;
+            font-family: 'Times New Roman';
+        }
+        .text-danger {
+            color: red;
+        }
+        .bg-success {
+            background-color: green;
+        }
+        .textkuning{
+            color: yellow;
+        }
+        .bgBiru{
+            background-color: blue;
+        }
+        <</style>*/
 </head>
 
 <body>
 <h1>Selamat Datang di Website</h1>    
-<p>Hari ini belajar Github, HTML, dan Deploy ke Vercel</p>
-<p>Belajar Web Menyenangkan</p>
+<p class="text-danger bg-success">Hari ini belajar Github, HTML, dan Deploy ke Vercel</p>
+<p class="textkuning bgBiru">Belajar Web Menyenangkan</p>
 
 <!-- heading dari 1 sd 6 -->
  <h1 style="color: aquamarine;">Judul </h1>
